# aws-sqs-app

./: README.md  pyproject.toml
app/: mock.py  sns.py  sqs.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
