[tool.poetry]
name = "aws-sqs-app"
version = "0.0.0"
description = "AWS SQS PoC"
authors = ["anthony.caliani"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.4.0"
boto3 = "^1.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
